--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,6 +14,9 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preload" href="css/styles.css" as="style">
 		<title>{title}</title>
 	</head>
 	<body>
@@ -21,30 +24,49 @@ const { title } = Astro.props;
 	</body>
 </html>
 <style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
+  :root{
+    --white: #ffffff;
+    --black: #212121;
+    --primary-color: #ffc107;
+    --secondary-color: #0097a7;
+    --gray: #757575;
+    --sweetGray: #dfe9f3;
+  }
+
+  html{
+    font-size: 62.5%;
+    box-sizing: border-box;
+    scroll-snap-type: y mandatory;
+  }
+
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
+
+  body{
+    font-size: 16px;/* 1rem = 10px */
+    font-family: 'Krub', Arial, Helvetica, sans-serif;
+    background-image: linear-gradient( to top, var(--sweetGray) 0%, var(--white) 100% );
+  }
+
+  h1 {
+    font-size: 3.8rem;
+  }
+
+  h2{
+    font-size: 2.8rem;
+  }
+
+  h3{
+    font-size: 1.8rem;
+  }
+
+  h1,h2,h3 {
+    text-align: center;
+  }
+
+  .container {
+    max-width: 120rem;
+    margin: 0 auto;
+  }
 </style>
